# nexus

./: .env.template  .gitignore  Dockerfile.api  Dockerfile.frontend  add_node.sh  dev.sh  diagnose.sh  docker-compose.yml  nexus_deploy.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Admin.tsx  Dashboard.tsx  JobBuilder.tsx  JobDetail.tsx  Jobs.tsx  Login.tsx  Nodes.tsx  Pools.tsx  Storage.tsx
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
