[project]
name = "nexus"
version = "0.1.0"
description = "Distributed compute cluster management system"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/server",
    "packages/agent",
    "packages/steps",
    "packages/cli",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
